Permitir rolagem touch com modais abertos

--- a/style.html
+++ b/style.html
@@ -684,7 +684,7 @@
         }
         body.nav-open {
             overflow: hidden;
-            touch-action: none;
+            touch-action: auto;
         }
         html, body, .app-shell, .main-content, #pages-container, .page {
             width: 100%;
@@ -692,7 +692,7 @@
         }
         body.modal-open {
             overflow: hidden;
-            touch-action: none;
+            touch-action: auto;
         }
         .fa-user-clock, .fas.fa-user-clock {
             color: inherit;
