--- a/style.html
+++ b/style.html
@@ -3079,6 +3079,28 @@
             justify-content: space-between;
             align-items: center;
             gap: 16px;
+            padding: 12px 16px;
+            border-radius: 18px;
+            background: color-mix(in srgb, var(--color-neutral-0) 92%, var(--color-neutral-100) 8%);
+            border: 1px solid color-mix(in srgb, var(--color-neutral-900) 8%, transparent);
+        }
+
+        .armario-modal-hero {
+            display: flex;
+            align-items: center;
+            gap: 14px;
+        }
+
+        .armario-modal-icon {
+            width: 40px;
+            height: 40px;
+            border-radius: 12px;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            background: color-mix(in srgb, var(--color-neutral-900) 8%, transparent);
+            color: var(--text-color);
+            font-size: 1rem;
         }
 
         .armario-modal-eyebrow {
@@ -3091,30 +3113,33 @@
 
         .armario-modal-title {
             margin: 6px 0 4px;
-            font-size: 1.6rem;
+            font-size: 1.85rem;
             letter-spacing: -0.02em;
-            font-weight: 700;
+            font-weight: 800;
             color: var(--text-color);
         }
 
         .armario-modal-subtitle {
             margin: 0;
-            font-size: 0.95rem;
+            font-size: 0.88rem;
             color: color-mix(in srgb, var(--text-color) 60%, transparent);
         }
 
         .armario-modal-status {
-            padding: 6px 12px;
+            padding: 8px 14px;
             border-radius: 999px;
-            font-weight: 600;
-            font-size: 0.82rem;
+            font-weight: 700;
+            font-size: 0.85rem;
             background: color-mix(in srgb, var(--color-neutral-100) 70%, transparent);
             color: var(--text-color);
             white-space: nowrap;
+            display: inline-flex;
+            align-items: center;
+            gap: 6px;
         }
 
         .armario-modal-status.status-em-uso {
-            background: color-mix(in srgb, #22c55e 16%, transparent);
+            background: color-mix(in srgb, #22c55e 20%, transparent);
             color: #15803d;
         }
 
@@ -3133,14 +3158,64 @@
             color: #0369a1;
         }
 
+        .armario-modal-status-dot {
+            width: 8px;
+            height: 8px;
+            border-radius: 999px;
+            background: currentColor;
+            box-shadow: 0 0 0 4px color-mix(in srgb, currentColor 20%, transparent);
+        }
+
         .armario-modal-grid {
             display: grid;
-            grid-template-columns: repeat(2, minmax(0, 1fr));
-            gap: 14px 20px;
+            grid-template-columns: minmax(0, 1.1fr) minmax(0, 1fr);
+            gap: 16px 20px;
             padding: 16px;
             border-radius: 16px;
             background: color-mix(in srgb, var(--color-neutral-100) 70%, transparent);
             border: 1px solid color-mix(in srgb, var(--color-neutral-900) 8%, transparent);
+        }
+
+        .armario-modal-patient {
+            display: flex;
+            flex-direction: column;
+            gap: 6px;
+            padding-right: 6px;
+        }
+
+        .armario-modal-patient-name {
+            font-size: 1.1rem;
+            font-weight: 700;
+            color: var(--text-color);
+        }
+
+        .armario-modal-patient-sub {
+            font-size: 0.95rem;
+            color: color-mix(in srgb, var(--text-color) 65%, transparent);
+        }
+
+        .armario-modal-visitor {
+            margin-top: 6px;
+            font-size: 0.92rem;
+            color: color-mix(in srgb, var(--text-color) 55%, transparent);
+        }
+
+        .armario-modal-chips {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 8px;
+            align-content: flex-start;
+        }
+
+        .armario-modal-chip {
+            display: inline-flex;
+            align-items: center;
+            padding: 8px 14px;
+            border-radius: 999px;
+            background: color-mix(in srgb, var(--color-neutral-900) 10%, transparent);
+            color: var(--text-color);
+            font-size: 0.92rem;
+            font-weight: 600;
         }
 
         .armario-modal-label {
@@ -3171,6 +3246,35 @@
             margin: 0;
         }
 
+        .armario-modal-termo {
+            display: flex;
+            flex-direction: column;
+            gap: 6px;
+            padding: 12px 14px;
+            border-radius: 12px;
+            background: color-mix(in srgb, #0f766e 28%, transparent);
+            border: 1px solid color-mix(in srgb, #0f766e 45%, transparent);
+            color: #0f172a;
+        }
+
+        .armario-modal-termo-title {
+            display: inline-flex;
+            align-items: center;
+            gap: 6px;
+            font-weight: 700;
+            font-size: 1rem;
+            color: #0f766e;
+        }
+
+        .armario-modal-termo-icon {
+            font-size: 1rem;
+        }
+
+        .armario-modal-termo-text {
+            font-size: 0.9rem;
+            color: color-mix(in srgb, var(--text-color) 60%, transparent);
+        }
+
         .armario-modal-actions {
             display: flex;
             flex-wrap: wrap;
@@ -3181,15 +3285,17 @@
         .armario-modal-primary-inline {
             border: none;
             border-radius: 999px;
-            padding: 10px 16px;
+            padding: 12px 18px;
             font-weight: 600;
-            font-size: 0.9rem;
+            font-size: 0.98rem;
             cursor: pointer;
             transition: transform 0.12s ease, box-shadow 0.12s ease;
         }
 
         .armario-modal-action-btn {
-            background: color-mix(in srgb, var(--color-neutral-900) 10%, transparent);
+            background: color-mix(in srgb, var(--color-neutral-900) 8%, transparent);
+            border: 1px solid color-mix(in srgb, var(--color-neutral-900) 14%, transparent);
+            box-shadow: 0 10px 22px color-mix(in srgb, var(--color-neutral-900) 12%, transparent);
             color: var(--text-color);
         }
 
@@ -3203,27 +3309,98 @@
         .armario-modal-secondary,
         .armario-modal-tertiary {
             border-radius: 999px !important;
-            padding: 10px 20px !important;
+            padding: 12px 22px !important;
             font-weight: 600 !important;
             box-shadow: none !important;
+            font-size: 1rem !important;
         }
 
         .armario-modal-primary {
-            background: #16a34a !important;
+            background: linear-gradient(135deg, #16a34a, #22c55e) !important;
+            box-shadow: 0 14px 26px rgba(22, 163, 74, 0.35) !important;
         }
 
         .armario-modal-secondary {
-            background: color-mix(in srgb, #2563eb 18%, transparent) !important;
+            background: transparent !important;
             color: #1d4ed8 !important;
+            border: 1px solid color-mix(in srgb, #2563eb 40%, transparent) !important;
         }
 
         .armario-modal-tertiary {
-            background: color-mix(in srgb, var(--color-neutral-900) 10%, transparent) !important;
-            color: var(--text-color) !important;
+            background: transparent !important;
+            color: color-mix(in srgb, var(--text-color) 55%, transparent) !important;
+            border: none !important;
         }
 
         .armario-modal-popup .swal2-close {
             color: var(--text-color);
+        }
+
+        [data-theme="dark"] .armario-modal-header {
+            background: color-mix(in srgb, var(--color-surface) 88%, var(--color-neutral-900) 12%);
+            border-color: color-mix(in srgb, var(--color-neutral-900) 18%, transparent);
+        }
+
+        [data-theme="dark"] .armario-modal-icon {
+            background: color-mix(in srgb, var(--color-neutral-900) 20%, transparent);
+            color: var(--color-neutral-700);
+        }
+
+        [data-theme="dark"] .armario-modal-chip {
+            background: color-mix(in srgb, var(--color-neutral-900) 22%, transparent);
+            color: var(--color-neutral-700);
+        }
+
+        [data-theme="dark"] .armario-modal-action-btn {
+            background: color-mix(in srgb, var(--color-neutral-900) 22%, transparent);
+            border-color: color-mix(in srgb, var(--color-neutral-900) 30%, transparent);
+            box-shadow: 0 12px 26px color-mix(in srgb, var(--color-neutral-900) 25%, transparent);
+            color: var(--color-neutral-700);
+        }
+
+        [data-theme="dark"] .armario-modal-termo {
+            background: color-mix(in srgb, #0f766e 26%, transparent);
+            border-color: color-mix(in srgb, #34d399 35%, transparent);
+            color: var(--color-neutral-700);
+        }
+
+        [data-theme="dark"] .armario-modal-termo-title {
+            color: #34d399;
+        }
+
+        [data-theme="dark"] .armario-modal-termo-text {
+            color: color-mix(in srgb, var(--color-neutral-700) 80%, transparent);
+        }
+
+        [data-theme="pink"] .armario-modal-header {
+            background: color-mix(in srgb, var(--color-surface) 92%, var(--color-neutral-100) 8%);
+            border-color: color-mix(in srgb, var(--color-neutral-900) 14%, transparent);
+        }
+
+        [data-theme="pink"] .armario-modal-icon {
+            background: color-mix(in srgb, var(--color-primary-500) 18%, transparent);
+            color: var(--color-neutral-900);
+        }
+
+        [data-theme="pink"] .armario-modal-chip {
+            background: color-mix(in srgb, var(--color-primary-500) 16%, transparent);
+            color: var(--color-neutral-900);
+        }
+
+        [data-theme="pink"] .armario-modal-action-btn {
+            background: color-mix(in srgb, var(--color-primary-500) 14%, transparent);
+            border-color: color-mix(in srgb, var(--color-primary-600) 28%, transparent);
+            box-shadow: 0 12px 26px color-mix(in srgb, var(--color-primary-600) 18%, transparent);
+            color: var(--color-neutral-900);
+        }
+
+        [data-theme="pink"] .armario-modal-termo {
+            background: color-mix(in srgb, var(--color-primary-600) 20%, transparent);
+            border-color: color-mix(in srgb, var(--color-primary-600) 40%, transparent);
+        }
+
+        [data-theme="pink"] .armario-modal-termo-title {
+            color: var(--color-primary-600);
         }
 
         @media (max-width: 640px) {
@@ -3241,8 +3418,14 @@
                 align-items: flex-start;
             }
 
+            .armario-modal-icon {
+                width: 44px;
+                height: 44px;
+                border-radius: 14px;
+            }
+
             .armario-modal-title {
-                font-size: 1.4rem;
+                font-size: 1.6rem;
             }
 
             .armario-modal-grid {
