Ajusta fontes do modal de armários

--- a/style.html
+++ b/style.html
@@ -3073,7 +3073,7 @@
             border-radius: 999px;
             padding: 10px 18px;
             font-weight: 600;
-            font-size: 0.95rem;
+            font-size: 1rem;
             letter-spacing: -0.01em;
         }
 
@@ -3115,7 +3115,7 @@
 
         .armario-modal-eyebrow {
             text-transform: uppercase;
-            font-size: 0.72rem;
+            font-size: 0.8rem;
             letter-spacing: 0.12em;
             color: color-mix(in srgb, var(--text-color) 45%, transparent);
             font-weight: 600;
@@ -3131,7 +3131,7 @@
 
         .armario-modal-subtitle {
             margin: 0;
-            font-size: 0.88rem;
+            font-size: 0.98rem;
             color: color-mix(in srgb, var(--text-color) 60%, transparent);
         }
 
@@ -3139,7 +3139,7 @@
             padding: 8px 14px;
             border-radius: 999px;
             font-weight: 700;
-            font-size: 0.85rem;
+            font-size: 0.95rem;
             background: color-mix(in srgb, var(--color-neutral-100) 70%, transparent);
             color: var(--text-color);
             white-space: nowrap;
@@ -3194,19 +3194,19 @@
         }
 
         .armario-modal-patient-name {
-            font-size: 1.1rem;
+            font-size: 1.2rem;
             font-weight: 700;
             color: var(--text-color);
         }
 
         .armario-modal-patient-sub {
-            font-size: 0.95rem;
+            font-size: 1.02rem;
             color: color-mix(in srgb, var(--text-color) 65%, transparent);
         }
 
         .armario-modal-visitor {
             margin-top: 6px;
-            font-size: 0.92rem;
+            font-size: 1rem;
             color: color-mix(in srgb, var(--text-color) 55%, transparent);
         }
 
@@ -3224,13 +3224,13 @@
             border-radius: 999px;
             background: color-mix(in srgb, var(--color-neutral-900) 10%, transparent);
             color: var(--text-color);
-            font-size: 0.92rem;
+            font-size: 1rem;
             font-weight: 600;
         }
 
         .armario-modal-label {
             display: block;
-            font-size: 0.78rem;
+            font-size: 0.86rem;
             text-transform: uppercase;
             letter-spacing: 0.08em;
             color: color-mix(in srgb, var(--text-color) 50%, transparent);
@@ -3239,7 +3239,7 @@
 
         .armario-modal-value {
             display: block;
-            font-size: 0.98rem;
+            font-size: 1.06rem;
             font-weight: 600;
             color: var(--text-color);
             margin-top: 4px;
@@ -3272,7 +3272,7 @@
             align-items: center;
             gap: 6px;
             font-weight: 700;
-            font-size: 1rem;
+            font-size: 1.05rem;
             color: #0f766e;
         }
 
@@ -3281,7 +3281,7 @@
         }
 
         .armario-modal-termo-text {
-            font-size: 0.9rem;
+            font-size: 0.98rem;
             color: color-mix(in srgb, var(--text-color) 60%, transparent);
         }
 
@@ -3297,7 +3297,7 @@
             border-radius: 999px;
             padding: 12px 18px;
             font-weight: 600;
-            font-size: 0.98rem;
+            font-size: 1.02rem;
             cursor: pointer;
             transition: transform 0.12s ease, box-shadow 0.12s ease;
         }
@@ -3435,7 +3435,42 @@
             }
 
             .armario-modal-title {
-                font-size: 1.6rem;
+                font-size: 1.7rem;
+            }
+
+            .armario-modal-eyebrow {
+                font-size: 0.85rem;
+            }
+
+            .armario-modal-subtitle {
+                font-size: 1.02rem;
+            }
+
+            .armario-modal-status {
+                font-size: 1rem;
+            }
+
+            .armario-modal-patient-name {
+                font-size: 1.25rem;
+            }
+
+            .armario-modal-patient-sub,
+            .armario-modal-visitor,
+            .armario-modal-chip,
+            .armario-modal-value {
+                font-size: 1.05rem;
+            }
+
+            .armario-modal-label {
+                font-size: 0.9rem;
+            }
+
+            .armario-modal-termo-title {
+                font-size: 1.1rem;
+            }
+
+            .armario-modal-termo-text {
+                font-size: 1.02rem;
             }
 
             .armario-modal-grid {
