--- a/script.html
+++ b/script.html
@@ -521,11 +521,6 @@
                     elementos.headerUserProfile.focus();
                 }
             }
-            if (elementos.avatarUrlInput) {
-                elementos.avatarUrlInput.value = '';
-                elementos.avatarUrlInput.classList.remove('invalid');
-                elementos.avatarUrlInput.removeAttribute('aria-invalid');
-            }
         }
         function painelNotificacoesAberto() {
             return Boolean(elementos.notificationPanel?.classList.contains('is-open'));
@@ -537,8 +532,8 @@
             const deveAbrir = Boolean(aberto);
             elementos.notificationPanel.classList.toggle('is-open', deveAbrir);
             elementos.notificationPanel.setAttribute('aria-hidden', deveAbrir ? 'false' : 'true');
-            if (elementos.notificationBell) {
-                elementos.notificationBell.setAttribute('aria-expanded', deveAbrir ? 'true' : 'false');
+            if (elementos.notificationTrigger) {
+                elementos.notificationTrigger.setAttribute('aria-expanded', deveAbrir ? 'true' : 'false');
             }
         }
         function alternarPainelNotificacoes() {
@@ -560,30 +555,6 @@
             sincronizarSelecaoAvatar();
             fecharModalAvatar();
         }
-        function aplicarAvatarPersonalizado() {
-            if (!elementos.avatarUrlInput) {
-                return;
-            }
-            const valor = elementos.avatarUrlInput.value.trim();
-            if (!valor) {
-                elementos.avatarUrlInput.classList.add('invalid');
-                elementos.avatarUrlInput.setAttribute('aria-invalid', 'true');
-                elementos.avatarUrlInput.focus();
-                return;
-            }
-            try {
-                const urlValida = new URL(valor);
-                elementos.avatarUrlInput.classList.remove('invalid');
-                elementos.avatarUrlInput.removeAttribute('aria-invalid');
-                const urlFinal = urlValida.toString();
-                elementos.avatarUrlInput.value = '';
-                aplicarAvatarUsuario(urlFinal);
-            } catch (erro) {
-                elementos.avatarUrlInput.classList.add('invalid');
-                elementos.avatarUrlInput.setAttribute('aria-invalid', 'true');
-                elementos.avatarUrlInput.focus();
-            }
-        }
         // Elementos DOM
         const elementos = {
             loginContainer: document.getElementById('login-container'),
@@ -597,7 +568,7 @@
             sidebarBackdrop: document.getElementById('sidebar-backdrop'),
             profileSelect: document.getElementById('profile-select'),
             unitSelect: document.getElementById('unit-select'),
-            notificationBell: document.getElementById('notification-bell'),
+            notificationTrigger: document.getElementById('profile-notification-toggle'),
             notificationPanel: document.getElementById('notification-panel'),
             notificationBadge: document.querySelector('.notification-badge'),
             armariosContainer: document.getElementById('armarios-container'),
@@ -649,12 +620,13 @@
             headerUserGreeting: document.getElementById('header-user-greeting'),
             headerUserGreetingRole: document.getElementById('header-user-greeting-role'),
             headerUserGreetingShift: document.getElementById('header-user-greeting-shift'),
+            profileModalAvatar: document.getElementById('profile-modal-avatar'),
+            profileModalName: document.getElementById('profile-modal-name'),
+            profileModalRole: document.getElementById('profile-modal-role'),
             avatarModal: document.getElementById('avatar-modal'),
             avatarModalBackdrop: document.getElementById('avatar-modal-backdrop'),
             avatarModalClose: document.getElementById('avatar-modal-close'),
             avatarOptions: document.getElementById('avatar-options'),
-            avatarUrlInput: document.getElementById('avatar-url'),
-            avatarUrlApply: document.getElementById('avatar-url-apply'),
             globalLoadingOverlay: document.getElementById('global-loading-overlay'),
             globalLoadingText: document.getElementById('global-loading-text'),
             termoModal: document.getElementById('termo-modal'),
@@ -1523,6 +1495,17 @@
                 elementos.headerUserAvatar.textContent = '--';
                 elementos.headerUserAvatar.style.backgroundImage = '';
                 elementos.headerUserAvatar.classList.remove('has-image');
+                if (elementos.profileModalAvatar) {
+                    elementos.profileModalAvatar.textContent = '--';
+                    elementos.profileModalAvatar.style.backgroundImage = '';
+                    elementos.profileModalAvatar.classList.remove('has-image');
+                }
+                if (elementos.profileModalName) {
+                    elementos.profileModalName.textContent = 'Usuário';
+                }
+                if (elementos.profileModalRole) {
+                    elementos.profileModalRole.textContent = '';
+                }
                 elementos.headerUserProfile?.setAttribute('aria-label', 'Perfil do usuário');
                 if (elementos.headerUserGreetingRole) {
                     elementos.headerUserGreetingRole.textContent = 'Visitante';
@@ -1535,6 +1518,12 @@
             elementos.headerUserName.textContent = nomeLimpo;
             elementos.headerUserRole.textContent = perfilAtualEhAdmin() ? 'Administrador' : 'Usuário';
             elementos.headerUserProfile?.setAttribute('aria-label', `Perfil do usuário ${nomeLimpo} (${elementos.headerUserRole.textContent})`);
+            if (elementos.profileModalName) {
+                elementos.profileModalName.textContent = nomeLimpo;
+            }
+            if (elementos.profileModalRole) {
+                elementos.profileModalRole.textContent = elementos.headerUserRole.textContent;
+            }
             if (elementos.headerUserGreetingRole) {
                 elementos.headerUserGreetingRole.textContent = perfilAtualEhAdmin() ? 'Administrador Geral' : 'Usuário';
             }
@@ -1544,10 +1533,20 @@
                 elementos.headerUserAvatar.style.backgroundImage = `url("${avatarUrl.replace(/"/g, '\\"')}")`;
                 elementos.headerUserAvatar.classList.add('has-image');
                 elementos.headerUserAvatar.textContent = '';
+                if (elementos.profileModalAvatar) {
+                    elementos.profileModalAvatar.style.backgroundImage = `url("${avatarUrl.replace(/"/g, '\\"')}")`;
+                    elementos.profileModalAvatar.classList.add('has-image');
+                    elementos.profileModalAvatar.textContent = '';
+                }
             } else {
                 elementos.headerUserAvatar.style.backgroundImage = '';
                 elementos.headerUserAvatar.classList.remove('has-image');
                 elementos.headerUserAvatar.textContent = gerarIniciais(nomeLimpo);
+                if (elementos.profileModalAvatar) {
+                    elementos.profileModalAvatar.style.backgroundImage = '';
+                    elementos.profileModalAvatar.classList.remove('has-image');
+                    elementos.profileModalAvatar.textContent = gerarIniciais(nomeLimpo);
+                }
             }
             sincronizarSelecaoAvatar();
             atualizarResponsavelMovimentacaoInfo();
@@ -2823,11 +2822,11 @@
                 });
             }
             // Notificações
-            if (elementos.notificationBell) {
-                elementos.notificationBell.addEventListener('click', () => {
+            if (elementos.notificationTrigger) {
+                elementos.notificationTrigger.addEventListener('click', () => {
                     alternarPainelNotificacoes();
                 });
-                elementos.notificationBell.addEventListener('keydown', event => {
+                elementos.notificationTrigger.addEventListener('keydown', event => {
                     if (event.key === 'Enter' || event.key === ' ') {
                         event.preventDefault();
                         alternarPainelNotificacoes();
@@ -2879,21 +2878,6 @@
                     }
                     event.preventDefault();
                     aplicarAvatarUsuario(botao.dataset.avatarUrl || '');
-                });
-            }
-            if (elementos.avatarUrlApply) {
-                elementos.avatarUrlApply.addEventListener('click', aplicarAvatarPersonalizado);
-            }
-            if (elementos.avatarUrlInput) {
-                elementos.avatarUrlInput.addEventListener('keydown', event => {
-                    if (event.key === 'Enter') {
-                        event.preventDefault();
-                        aplicarAvatarPersonalizado();
-                    }
-                });
-                elementos.avatarUrlInput.addEventListener('input', () => {
-                    elementos.avatarUrlInput.classList.remove('invalid');
-                    elementos.avatarUrlInput.removeAttribute('aria-invalid');
                 });
             }
             // Fechar modais
@@ -3392,8 +3376,8 @@
                     return;
                 }
                 const cliqueForaDoPainel = elementos.notificationPanel && !elementos.notificationPanel.contains(e.target);
-                const cliqueForaDoSino = elementos.notificationBell && !elementos.notificationBell.contains(e.target);
-                if (cliqueForaDoPainel && cliqueForaDoSino) {
+                const cliqueForaDoTrigger = elementos.notificationTrigger && !elementos.notificationTrigger.contains(e.target);
+                if (cliqueForaDoPainel && cliqueForaDoTrigger) {
                     atualizarPainelNotificacoes(false);
                 }
             });
@@ -5342,10 +5326,9 @@
                 const nomeLimpo = (unidade.nome || '').trim();
                 const desativada = unidade.status !== 'ativa';
                 const label = desativada ? `${nomeLimpo} (inativa)` : nomeLimpo;
-                const descricao = desativada ? 'Unidade temporariamente indisponível' : 'Filtrar por este setor';
-                return `<option value="${nomeLimpo}" ${desativada ? 'disabled' : ''} data-icon="fas fa-location-dot" data-description="${descricao}">${label}</option>`;
+                return `<option value="${nomeLimpo}" ${desativada ? 'disabled' : ''} data-icon="fas fa-location-dot">${label}</option>`;
             }).join('');
-            const opcaoTodas = `<option value="todas" data-icon="fas fa-layer-group" data-description="Visualização geral por setor">Todas as unidades</option>`;
+            const opcaoTodas = `<option value="todas" data-icon="fas fa-layer-group">Todas as unidades</option>`;
             elementos.unitSelect.innerHTML = `${deveIncluirOpcaoTodas ? opcaoTodas : ''}${opcoes}`;
             const opcaoCorrespondente = Array.from(elementos.unitSelect.options)
                 .find(option => normalizarTexto(option.value) === valorAtualNormalizado);
