--- a/style.html
+++ b/style.html
@@ -1703,7 +1703,7 @@
             -webkit-backdrop-filter: var(--modal-overlay-blur);
         }
         .avatar-modal {
-            width: min(340px, 100%);
+            width: min(360px, 100%);
             background: var(--modal-bg);
             border-radius: var(--modal-radius);
             box-shadow: var(--modal-shadow);
@@ -1713,6 +1713,7 @@
             flex-direction: column;
             gap: 16px;
             position: relative;
+            overflow: hidden;
         }
         .avatar-modal-header {
             display: flex;
@@ -1746,10 +1747,98 @@
             color: var(--primary-dark);
             outline: none;
         }
-        .avatar-modal-description {
+        .profile-modal-card {
+            display: flex;
+            align-items: center;
+            gap: 14px;
+            padding: 14px;
+            border-radius: 16px;
+            background: linear-gradient(135deg, color-mix(in srgb, var(--primary-color) 18%, transparent), color-mix(in srgb, var(--secondary-color) 22%, transparent));
+            border: 1px solid color-mix(in srgb, var(--primary-color) 20%, transparent);
+        }
+        .profile-modal-avatar {
+            width: 64px;
+            height: 64px;
+            border-radius: 22px;
+            background-color: var(--secondary-color);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            font-weight: 700;
+            font-size: 1.4rem;
+            letter-spacing: 0.5px;
+            overflow: hidden;
+            position: relative;
+        }
+        .profile-modal-avatar.has-image {
+            background-color: transparent;
+            background-size: cover;
+            background-position: center;
+            color: transparent;
+        }
+        .profile-modal-info {
+            display: flex;
+            flex-direction: column;
+            gap: 4px;
+        }
+        .profile-modal-info strong {
+            font-size: 1rem;
+            color: var(--text-color);
+        }
+        .profile-modal-info span {
             font-size: 0.85rem;
             color: var(--muted-color);
-            line-height: 1.4;
+        }
+        .profile-modal-actions {
+            display: grid;
+            grid-template-columns: repeat(2, minmax(0, 1fr));
+            gap: 12px;
+        }
+        .profile-action-button {
+            border: 1px solid color-mix(in srgb, var(--dark-color) 12%, transparent);
+            background: color-mix(in srgb, var(--surface-color) 86%, var(--light-color) 14%);
+            color: var(--text-color);
+            padding: 10px 12px;
+            border-radius: 14px;
+            font-weight: 600;
+            cursor: pointer;
+            display: inline-flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 8px;
+            transition: transform 0.2s ease, box-shadow 0.2s ease, background-color 0.2s ease;
+        }
+        .profile-action-button span {
+            display: inline-flex;
+            align-items: center;
+            gap: 8px;
+        }
+        .profile-action-button i {
+            color: var(--primary-color);
+        }
+        .profile-action-button:hover,
+        .profile-action-button:focus-visible {
+            transform: translateY(-1px);
+            box-shadow: 0 12px 18px rgba(15, 23, 42, 0.12);
+            outline: none;
+        }
+        .profile-action-button--theme i {
+            color: var(--secondary-color);
+        }
+        .profile-action-button .notification-badge {
+            position: static;
+            transform: none;
+            min-width: 22px;
+            height: 22px;
+            border-radius: 999px;
+            background: var(--danger-color);
+            color: #fff;
+            font-size: 0.75rem;
+            padding: 0 6px;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
         }
         .avatar-grid {
             display: grid;
@@ -1794,55 +1883,6 @@
         .avatar-option.selected {
             border-color: var(--primary-color);
             box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.18);
-        }
-        .avatar-custom {
-            display: flex;
-            flex-direction: column;
-            gap: 8px;
-        }
-        .avatar-custom label {
-            font-size: 0.8rem;
-            font-weight: 600;
-            color: var(--dark-color);
-        }
-        .avatar-custom-control {
-            display: flex;
-            gap: 8px;
-        }
-        .avatar-custom-control input[type="url"] {
-            flex: 1;
-            border-radius: var(--input-radius);
-            border: 1px solid var(--input-border);
-            padding: 8px 10px;
-            font-size: 0.85rem;
-            color: var(--input-text);
-            background-color: var(--input-bg);
-        }
-        .avatar-custom-control input[type="url"]:focus {
-            outline: 2px solid var(--input-focus-ring);
-            outline-offset: 1px;
-        }
-        .avatar-custom-control input[type="url"].invalid {
-            border-color: var(--danger-color);
-            box-shadow: 0 0 0 2px color-mix(in srgb, var(--danger-color) 18%, transparent);
-        }
-        .avatar-apply-button {
-            border: none;
-            background: var(--btn-primary-bg);
-            color: var(--btn-primary-text);
-            padding: 8px 14px;
-            border-radius: 10px;
-            font-weight: 600;
-            cursor: pointer;
-            transition: background-color 0.2s ease, transform 0.2s ease;
-            font-size: 0.85rem;
-            white-space: nowrap;
-        }
-        .avatar-apply-button:hover,
-        .avatar-apply-button:focus-visible {
-            background: var(--btn-primary-bg-hover);
-            transform: translateY(-1px);
-            outline: none;
         }
         .avatar-modal.hidden,
         .avatar-modal-backdrop.hidden {
